--- a/fix-callback.adoc
+++ b/fix-callback.adoc
@@ -1,27 +1,32 @@
+:fix-callback: Callback overuse
+
+[%conceal]
+= {fix-callback}
+
+=== [.step]#But wait, there's more#
+
+[.notes]
+--
+That covers the built-in overuse section.
+
+(*step*) Or does it.
+--
+
 [%auto-animate.columns]
-= Injected callback
+== {fix-callback}
 
 [.column]
 --
-[source%linenums,go,data-id=LinkStyle]
-----
-func LinkStyleDir(string) string {
-  /* ... */
-}
+Function reference lock-in
 
-func LinkStylePlain(string) string {
-  /* ... */
-}
-
-func LinkStyleHTML(string) string {
-  /* ... */
-}
-----
+[%step.medium, step=4]
+* Opaque
+* Inflexible
 --
 
 [.column]
 --
-[source%linenums,go,data-id=SiteGen]
+[source%linenums%step,go,data-id=SiteGen,highlight="1,3",step=1]
 ----
 type SiteGen struct {
   /* ... */
@@ -29,12 +34,19 @@ type SiteGen struct {
 }
 ----
 
-[source%linenums.medium,go]
+[source%linenums%step,go,data-id=LinkStyle,step=2]
+----
+func LinkStyleDir(string)   string { ... }
+func LinkStylePlain(string) string { ... }
+func LinkStyleHTML(string)  string { ... }
+----
+
+[source%linenums%step.medium,go,data-id=RealtiveURL,highlight="2,4",step=3]
 ----
 func (g *SiteGen) RelativeURL(dst *Page) string {
-  styleLink := g.FormatURL
+  styleLink := g.LinkStyle
   if styleLink == nil {
-    styleLink = LinkStyleDir // default
+    styleLink = LinkStyleDir /* default */
   }
   /* ... */
 }
@@ -43,53 +55,56 @@ func (g *SiteGen) RelativeURL(dst *Page) string {
 
 [.notes]
 --
-Over here, `SiteGen` has a `FormatURL` field.
-This is any function that takes a string and returns a string.
+The previous section used enums to define link styles.
+But we could've gone a different direction: callbacks.
 
-Users can write their own, or use one of the pre-defined ones.
-I can use the old behavior as the default if the field is unset.
+* (*step*) Define LinkStyle as any function
+  that takes a string and returns a string.
+* (*step*) Export three functions matching that signature.
+  These are the default styles.
+* (*step*) Use the injected value, falling back to the default.
+* User can use one of the pre-defined styles,
+  or write their own.
 
-This is not bad, but it's not great:
+This isn't terrible. It's also not great.
 
-* It's very opaque; I don't know what's in a URL formatter.
-  It's just a function reference.
-  I can't inspect it, analyze it, compare it.
-* I can't expand it. For example,
-  if in the future, I decide that the thing that formats links
-  needs to know metadata about the page the link is for,
-  I can't do that easily.
+* (*step*) It's very opaque; It's just a function reference.
+  We don't know what's inside a LinkStyle.
+  We can't inspect it, analyze it, or compare it.
+* (*step*) It's inflexible: We cannot expand it.
+  For example, if I decide that link styles
+  need metadata about the page, I can't do that easily.
 
 Earlier in the talk,
-I mentioned we can accept interfaces instead of concrete implementations
-to decouple from that implementation and allow ourselves to grow abstractions.
+I mentioned that if we want to plan for expansion,
+we should accept interfaces instead of concrete implementations.
+
 We can apply that here too!
 --
 
 [%auto-animate.columns]
-== Injected interface
+== {fix-callback}
 
-// NOTE: If this is changed, Large scoped conditions should also be updated.
+// NOTE:
+// If this example changes,
+// the one in Large scoped conditions should as well.
 
 [.column]
 --
+Use an interface
+
 [source%linenums,go,data-id=LinkStyler]
 ----
 type LinkStyler interface {
-   StyleLink(string) string
+  StyleLink(string) string
 }
 ----
 
-[source%linenums.medium,go,data-id=LinkStyle]
+[source%linenums,go,data-id=LinkStyle]
 ----
-type LinkStyle int
-
-const (
-   LinkStyleDir   LinkStyle = iota
-   LinkStylePlain
-   LinkStyleHTML
-)
-
-func (LinkStyle) StyleLink(string) string
+type DirLinkStyler   /* ... */
+type PlainLinkStyler /* ... */
+type HTMLLinkStyler  /* ... */
 ----
 --
 
@@ -102,32 +117,61 @@ type SiteGen struct {
   LinkStyler LinkStyler
 }
 ----
+
+// [source%linenums.medium,go,data-id=LinkStyle]
+// ----
+// type LinkStyle int
+//
+// const (
+//   LinkStyleDir   LinkStyle = iota
+//   LinkStylePlain
+//   LinkStyleHTML
+// )
+//
+// func (LinkStyle) StyleLink(string) string
+// ----
+
+[source%linenums.medium,go,data-id=RealtiveURL]
+----
+func (g *SiteGen) RelativeURL(dst *Page) string {
+  styler := g.LinkStyle
+  if styler == nil {
+    styler = new(LinkStyleDir) /* default */
+  }
+  /* ... */
+}
+----
 --
 
 [.notes]
 --
-I replaced the callback with a single method interface.
-I already had a name for that behavior -- I reused it.
-A LinkStyler.
+We replace the callback with a single method interface, LinkStyler,
+and turn the default implementations into separate types.
+The rest remains largely unchanged.
 
-This also allows me to re-use that LinkStyle enum from before.
-I implement the interface for LinkStyle
-and then my pre-defined list of behaviors has meaningful names
-and comparable values for them.
+Note that we could've also used the same type (like an enum)
+for the built-in styles, but there's only so much space
+on that slide.
 
-And then if I decide to expand the abstraction,
-I can upcast.
+// This also allows me to re-use that LinkStyle enum from before.
+// I implement the interface for LinkStyle
+// and then my pre-defined list of behaviors has meaningful names
+// and comparable values for them.
+
+Anyway, if I decide to expand the abstraction...
 --
 
 [%auto-animate.columns]
-== Injected interface
+== {fix-callback}
 
 [.column]
 --
+Upcast the interface
+
 [source%linenums,go,data-id=LinkStyler]
 ----
 type LinkStyler interface {
-   StyleLink(string) string
+  StyleLink(string) string
 }
 
 type PageLinkStyler interface {
@@ -138,21 +182,33 @@ type PageLinkStyler interface {
 
 [.column]
 --
-[source%linenums.medium,go]
+[source%linenums,go,data-id=SiteGen]
 ----
-link := /* ... */
-if pl, ok := styler.(PageLinkStyler); ok {
-  link = pl.LinkPage(page, link)
-} else {
-  link = linkStyler.StyleLink(link)
+type SiteGen struct {
+  /* ... */
+  LinkStyler LinkStyler
+}
+----
+
+[source%linenums.medium,go,data-id=RealtiveURL,highlight="7-8"]
+----
+func (g *SiteGen) RelativeURL(dst *Page) string {
+  styler := g.LinkStyle
+  if styler == nil {
+    styler = new(LinkStyleDir) /* default */
+  }
+  /* ... */
+  if pl, ok := styler.(PageLinkStyler); ok {
+    link = pl.StylePageLink(page, link)
+  } else {
+    link = linkStyler.StyleLink(link)
+  }
+  return link
 }
 ----
 --
 
 [.notes]
 --
-For example,
-suppose I decide that the link styler needs to be able to inspect the page;
-I can add an upgrade to the `LinkStyler` interface that takes precedence
-and has the new type signature.
+I can upcast it like discussed before.
 --
